playbin3: Fix deadlock when adding multiple parsebin

https://bugzilla.gnome.org/show_bug.cgi?id=773131